# Qwen3.5-TurboQuant-MLX-LM

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: release_notes_v0.1_research_preview.md
scripts/: export_preview_bundle.py
src/turbomlx/: __init__.py  api.py  cli.py  exceptions.py  prompt_cache.py
src/turbomlx/core_ref/: __init__.py  artifacts.py  codebooks.py  mixed_precision.py  packing.py  qjl.py  quantizers.py  rotation.py
src/turbomlx/eval/: __init__.py  jsonl_eval.py  logit.py  longbench.py  needle.py  perplexity.py  runtime.py
src/turbomlx/mlx_runtime/: __init__.py  attention.py  availability.py  benchmarking.py  cache.py  config.py  generation.py  metrics.py  patching.py  qwen_native.py
tests/: test_availability.py  test_cache_helpers.py  test_cli.py  test_codebooks.py  test_config.py  test_generation.py  test_mixed_precision.py  test_mlx_smoke.py  test_native_qwen_scorer.py  test_needle.py  test_packaging.py  test_packing.py  test_patching.py  test_prompt_cache.py  test_quantizers.py  test_qwen_preview_runtime.py
